<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bacground"
    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp">
         <TextView
             android:id="@+id/cajaRandom1"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/caja1"
             android:textColor="@color/blanco"
             android:textSize="30sp"
             />
         <TextView
             android:id="@+id/cajaOper"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/caja3"
             android:textColor="@color/blanco"
             android:textSize="30sp"
             />
         <TextView
             android:id="@+id/cajaRandom2"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/caja2"
             android:textColor="@color/blanco"
             android:textSize="30sp"/>
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnrandom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/generarrandom"
            android:text="@string/btngenerar"
            android:textColor="@color/blanco"
            android:textSize="30sp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnsuma"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/btnsuma"
            android:background="@color/mas"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnresta"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/btnresta"
            android:background="@color/menos"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnlimpiar"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/btnlimpiar"
            android:background="@color/limpiar"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
         <Button
             android:id="@+id/btnmult"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:text="@string/btnmult"
             android:background="@color/mult"
             android:textColor="@color/blanco"
             android:textSize="30sp"
             />
         <Button
             android:id="@+id/btndiv"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:text="@string/btndiv"
             android:background="@color/div"
             android:textColor="@color/blanco"
             android:textSize="30sp"
             />
     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnpar"
            android:gravity="center"
            android:background="@color/resultadopar"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <Button
            android:id="@+id/btnprimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnprimo"
            android:gravity="center"
            android:background="@color/resultadoprimo"
            android:textColor="@color/blanco"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnresult1"
            android:gravity="center"
            android:background="@color/resultado"
            android:textColor="@color/blanco"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/resultnumerico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="00"
            android:gravity="center"
            android:background="@color/resultnumerico"
            android:textColor="@color/blanco"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/par_primo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/resultado"
            android:gravity="center"
            android:text="ES PAR"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>